--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700);
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+
 /*@import "compass/css3";*/
 
 
@@ -23,7 +24,7 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: 'Noto Sans','Montserrat', '微軟正黑體', Helvetica, Arial, sans-serif; 
+  font-family: 'Open Sans','Montserrat','微軟正黑體', Helvetica, Arial, sans-serif; 
 }
 
 section, article, header, footer, nav, aside {
@@ -43,7 +44,7 @@ body {
 }
 
 a {
-    color: #acb6bc;
+    color: #61b3ac;
     text-decoration: none;
     
     -moz-transition: all 0.2s ease-out;
@@ -54,7 +55,7 @@ a {
 
 a:hover,
 a:active {
-    color: #b6caca;
+    color: #3f9f95;
     text-decoration: none;
 }
 
@@ -76,22 +77,22 @@ input[type="button"]{
 h1, h2, h3 {
     text-align: center;   
     font-family: 'Montserrat', Helvetica, Arial, sans-serif; 
+    letter-spacing: 0.05rem;
 }
 
 h1 { 
-    font-size: 36px;  
+    font-size: 32px;  
     font-weight: 700;
-    line-height: 40px;
+    line-height: 36px;
     padding-bottom: 20px;
-    letter-spacing: 0.1rem;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 400;
-    line-height: 24px;/*28*/
+    line-height: 24px;
     padding-bottom: 20px;   
-    letter-spacing: 0.05rem;
+    
 }
 
 h3 {
@@ -99,25 +100,26 @@ h3 {
     font-weight: 700;
     line-height: 20px;
     padding-bottom: 20px;   
-    letter-spacing: 0.05rem;
     text-transform: uppercase;
 }
 
 p {
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif; 
     font-size: 14px;
     line-height: 28px;
     font-weight: 400;
     letter-spacing: 0.01rem;
     padding-bottom: 20px;
     
+    /*
     max-width: 560px;
     margin: 0 auto;
     text-align: center;
+    */
 }
 
 ul{
     margin: 0 auto;
-    text-align: center;
     line-height: 28px;
 }
 
@@ -130,7 +132,6 @@ ul{
     position: fixed;
     padding: 32px 0px;
     background: #f5f5f5;
-    
 }
 
 .nav-container{
@@ -173,7 +174,7 @@ ul.menu li a {
 }
 
 ul.menu li a:hover {
-    color: #b6caca;
+    color: #3f9f95;
     
 }
 
@@ -186,15 +187,7 @@ ul.menu li a:hover {
     position: relative;
     padding-top: 160px;
     /*padding: 160px 5vw 0 5vw;*/
-    
-    
 }
-
-.about, .contact, .interests, .title {
-    margin-bottom: 80px;
-}
-
-/*===================== work =====================*/
 
 .work-container{
     position: relative;
@@ -216,12 +209,25 @@ ul.menu li a:hover {
 .clearfix {     
     clear: both;
     content: "";
-  }
+}
 
-.work-item-2,
-.work-item-3,
-.pic-item-2,
-.pic-item-3{
+.about-item{
+    text-align: left;
+    padding-bottom: 60px;
+    max-width: 600px;
+    margin: 0 auto;
+    position: relative;
+    
+}
+.about-item h3{
+    text-align: left;
+    
+}
+/*===================== work =====================*/
+
+.work-item,
+.pic-item{
+    
     float: left;
     position: relative;
     background: #fff;
@@ -234,49 +240,34 @@ ul.menu li a:hover {
     cursor: pointer;
 }
 
-.work-item-2,
-.pic-item-2{
+.col-2{
     width: 46%;
     height: auto;
     margin: 0 2% 4% 2%;
-
 }
 
-.work-item-3,
-.pic-item-3 {
+.col-3{
     width: 31%;
     height: auto;
     margin: 0 1.15% 4% 1.15%;
 }
 
-.work-item-2 img, 
-.work-item-3 img {
+.work-item img{
     display: block;
     width: 100%;
     height: auto;
     border-radius: 2% 2% 0 0;
     -moz-border-radius: 2% 2% 0 0;
     -webkit-border-radius: 2% 2% 0 0;
-    
-    /*-moz-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;*/
 }
 
-.pic-item-2 img, 
-.pic-item-3 img {
+.pic-item img{
     display: block;
     width: 100%;
     height: auto;
     border-radius: 2%;
     -moz-border-radius: 2%;
     -webkit-border-radius: 2%;
-    
-    /*-moz-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;*/
 }
 
 .overlay{
@@ -288,11 +279,6 @@ ul.menu li a:hover {
     height: 100%;
     width: 100%;
     opacity: 0;
-    
-    /*-moz-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;*/ 
     background-color: rgba(255, 255, 255, 0.3);
     
     border-radius: 2%;
@@ -300,38 +286,33 @@ ul.menu li a:hover {
     -webkit-border-radius: 2%;
 }
 
-
-.work-item-2:hover .overlay, 
-.work-item-3:hover .overlay,
-.pic-item-2:hover .overlay,
-.pic-item-3:hover .overlay{
+.work-item:hover .overlay,
+.pic-item:hover .overlay{
     opacity: 1;
     box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.1);
     -webkit-box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.1);
     -moz-box-shadow: 0px 5px 20px 0px rgba(0,0,0,0.1);
 }
 
-.work-item-2 h3,
-.work-item-3 h3,
-.pic-item-2 h3,
-.pic-item-3 h3{ 
-    color:#404040; 
+
+
+.work-item h3,
+.pic-item h3{ 
     line-height: 20px;
     padding-top: 16px;
     padding-bottom: 4px;
-
+    text-align: center;
 }
 
-.work-item-2 p,
-.work-item-3 p,
-.pic-item-2 p,
-.pic-item-3 p{ 
+.work-item p,
+.pic-item p{ 
     font-family: 'Montserrat', Helvetica, Arial, sans-serif; 
     color:#606060; 
     line-height: 20px;
-    padding-bottom: 16px;
-    
+    padding-bottom: 16px;  
+    text-align: center;
 }
+
 /*===================== pop-up =====================*/
 
 .hidden {
@@ -364,31 +345,26 @@ ul.menu li a:hover {
     border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
-    
-    /*transition: all 0.2s ease-out;
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;*/
 }
 
 .button:hover{
     transform: scale(1.05);
 }
 
-/*===================== contact =====================*/
+/*===================== socailmedia =====================*/
 
-.contact li{
+.socailmedia li{
     display: inline;
 }
 
-.contact li a{
+.socailmedia li a{
     color: #404040;
 }
-.contact li a:hover{
-    color: #b6caca;
+.socailmedia li a:hover{
+    color: #3f9f95;
 }
 
-.contact li span:after{
+.socailmedia li span:after{
     content: ' ';
     
 }
@@ -396,7 +372,8 @@ ul.menu li a:hover {
 /*===================== footer =====================*/
 
 #footer {
-   
+    font-family: 'Open Sans', Helvetica, Arial, sans-serif; 
+    text-align: center;
 }
 
 /*===================== responsive =====================*/
@@ -432,32 +409,29 @@ ul.menu li a:hover {
 /*瀏覽區域的寬度小於800像素*/
 @media screen and ( max-width: 800px ){
     
-   .work-item-3, 
-   .pic-item-3{
+   .col-3{
         width: 46%;
         height: auto;
         margin: 0 2% 4% 2%;
     }
-
 
 }
 
 /*瀏覽區域的寬度小於480像素*/
 @media screen and ( max-width: 480px ){
     
+    .container {
+        padding-top: 100px;
+    }
+    
     .nav{
         padding: 5px 0px;
     }
-
     
-    .work-item-2, 
-    .work-item-3,
-    .pic-item-2,
-    .pic-item-3{
+    .col-2, .col-3{
         width: 90%;
         height: auto;
         margin: 0 5% 8% 5%;
-
     }
-
+    
 }
