--- a/css/main.css
+++ b/css/main.css
@@ -130,7 +130,7 @@ ul{
     width: 100%;
     z-index: 1;
     position: fixed;
-    padding: 32px 0px;
+    padding: 16px 0px;
     background: #f5f5f5;
 }
 
@@ -225,9 +225,10 @@ ul.menu li a:hover {
 }
 /*===================== work =====================*/
 
+
+
 .work-item,
 .pic-item{
-    
     float: left;
     position: relative;
     background: #fff;
@@ -250,6 +251,12 @@ ul.menu li a:hover {
     width: 31%;
     height: auto;
     margin: 0 1.15% 4% 1.15%;
+}
+
+.col-4{
+    width: 23%;
+    height: auto;
+    margin: 0 1% 4% 1%;
 }
 
 .work-item img{
@@ -279,7 +286,7 @@ ul.menu li a:hover {
     height: 100%;
     width: 100%;
     opacity: 0;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.1);
     
     border-radius: 2%;
     -moz-border-radius: 2%;
@@ -386,23 +393,8 @@ ul.menu li a:hover {
         padding: 0 5%;
     }
 
-    ul.logo{ 
-        display: inline-block;
-        margin: 0;
-        padding: 0;  
-    }
-
-    ul.menu {
-        display: inline-block;
-        margin: 0;
-        padding: 0;     
-    }
-    
     .container {
         width: 90%;
-        margin: 0 auto;
-        position: relative;
-        padding-top: 160px;
     }
 }
 
@@ -419,11 +411,7 @@ ul.menu li a:hover {
 
 /*瀏覽區域的寬度小於480像素*/
 @media screen and ( max-width: 480px ){
-    
-    .container {
-        padding-top: 100px;
-    }
-    
+
     .nav{
         padding: 5px 0px;
     }
