--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,14 @@ h3 {
     
 }
 
+h4 {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
+    padding-bottom: 20px;   
+    
+}
+
 p {
     font-family: 'Open Sans', Helvetica, Arial, sans-serif; 
     font-size: 14px;
@@ -196,7 +204,7 @@ ul.menu li a:hover {
     margin-right: auto;
     /*padding: 0 5vw;*/
 
-    cursor: pointer;
+    /*cursor: pointer;*/
     display: flow-root;
 }
 
@@ -231,15 +239,19 @@ ul.menu li a:hover {
 .pic-item{
     float: left;
     position: relative;
-    background: #fff;
+    
     border-radius: 2%;
     -moz-border-radius: 2%;
     -webkit-border-radius: 2%;
     /*overflow: hidden;
     transform: rotate(0deg);
     -webkit-transform:rotate(0deg);*/
-    cursor: pointer;
 }
+
+.work-item{
+    background: #fff;
+}
+
 .col-1{
     width: 60%;
     height: auto;
@@ -315,6 +327,15 @@ ul.menu li a:hover {
     padding-bottom: 4px;
     text-align: center;
 }
+
+.work-item h4,
+.pic-item h4{ 
+    line-height: 20px;
+    padding-top: 16px;
+    padding-bottom: 4px;
+    text-align: center;
+}
+
 
 .work-item p,
 .pic-item p{ 
