--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,11 @@ img,svg {
      max-width: 100%;
  }
 
+bold{
+    
+    font-weight: 700;
+}
+
 input[type="button"]{
   cursor: pointer;
 }
@@ -96,9 +101,9 @@ h2 {
 }
 
 h3 {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 700;
-    line-height: 20px;
+    line-height: 24px;
     padding-bottom: 20px;   
     
 }
@@ -126,6 +131,12 @@ p {
     */
 }
 
+
+.gray{
+    
+    color: #838383;
+    
+}
 ul{
     margin: 0 auto;
     line-height: 28px;
@@ -225,9 +236,9 @@ ul.menu li a:hover {
 }
 
 .title-item{
-    text-align: left;
+    text-align: center;
     padding-bottom: 60px;
-    max-width: 600px;
+    max-width: 1000px;
     margin: 0 auto;
     position: relative;
 }
@@ -461,7 +472,7 @@ ul.menu li a:hover {
         padding: 0.5rem;
     }
     
-    .col-1, .col-2, .col-3{
+    .col-1, .col-2{
         width: 90%;
         height: auto;
         margin: 0 5% 8% 5%;
