--- a/css/main.css
+++ b/css/main.css
@@ -132,16 +132,28 @@ p {
 }
 
 
-.gray{
-    
-    color: #838383;
-    
-}
 ul{
     margin: 0 auto;
     line-height: 28px;
 }
 
+.gray{
+    color: #a0a0a0;
+}
+
+.sub-heading{
+    text-transform: uppercase;
+    font-size: 13px;
+    letter-spacing: 1.4px;
+}
+
+.marker-yellow {
+    box-shadow: inset 0 -15px 0 0px #F7F25B;
+    -moz-box-shadow: inset 0 -15px 0 0px #F7F25B;
+    -ms-box-shadow: inset 0 -15px 0 0px #F7F25B;
+    -webkit-box-shadow: inset 0 -15px 0 0px #F7F25B;
+    -o-box-shadow: inset 0 -15px 0 0px #F7F25B;
+}
 
 /*===================== nav =====================*/
 
@@ -224,10 +236,20 @@ ul.menu li a:hover {
     text-align: center;
 }
 
+
 .work-container:after{
     content: "";
     clear: both;  
     display: table;
+}
+
+.container-full {
+    width: 100%;
+    
+    margin: 0 auto;
+    position: relative;
+    padding-top: 160px;
+    /* padding: 160px 5vw 0 5vw; */
 }
 
 .clearfix {     
